add os info to system status endpoint
